src/objects/Gotv_Universe__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gotv Universes</relationshipLabel>
        <relationshipName>Gotv_Universes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FilterSoql__c</fullName>
        <label>FilterSoql</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SavedFilter__c</fullName>
        <label>SavedFilters</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Gotv Universe</label>
    <nameField>
        <label>Gotv Universe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gotv Universes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>